# Inventario-Simple

./: CMakeLists.txt  Component.h  DatabaseManager.cpp  DatabaseManager.h  InventoryManager.cpp  InventoryManager.h  README.md  addcomponentwindow.cpp  addcomponentwindow.h  addcomponentwindow.ui  confirmdeletedialog.cpp  confirmdeletedialog.h  confirmdeletedialog.ui  editcomponentwindow.cpp  editcomponentwindow.h  editcomponentwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reportgenerator.h
